@@ -7,7 +7,10 @@ extends qw/DBIx::Class::Schema/;
 
 our $VERSION = 1;
 
-__PACKAGE__->load_namespaces();
+
+__PACKAGE__->load_namespaces(
+     default_resultset_class => '+Wing::DB::ResultSet',
+);
 
 no Moose;
 __PACKAGE__->meta->make_immutable;
